@@ -28,21 +28,6 @@ dnl variables
 PACKAGE=gerbv
 VERSION=0.12
 
-dnl --enable-batch : turn on guile/batch support
-AC_ARG_ENABLE(batch,
-    [  --enable-batch          Enable batch support (ie use Guile).],
-    [
-        if test $enableval = "yes"; then
-                guile_in_use=yes
-		AC_DEFINE(GUILE_IN_USE)
-        fi
-    ])
-
-dnl --with-backend-dir : tells where to store global backends if != default
-AC_ARG_WITH(backend-dir,
-    [  --with-backend-dir      Where to store backends if != default.],
-	opt_backend_dir=$withval)
-
 dnl --enable-exportpng
 AC_ARG_ENABLE(exportpng,
     [  --disable-exportpng     Disable PNG export.],
@@ -96,22 +81,6 @@ AC_PROG_CC
 AC_PROG_MAKE_SET
 AC_PROG_INSTALL
 AC_ARG_PROGRAM
-
-dnl Guile stuff
-if test "$guile_in_use" = "yes" ; then
-	GUILE_FLAGS
-
-	dnl Check that scm_make_real exist
-	AC_CHECK_LIB(guile, scm_make_real,,
-        AC_MSG_ERROR(**Upgrade Guile**  At least version >= 1.4), 
-	$GUILE_LDFLAGS)
-	
-	dnl Restore LIBS. Apperantly AC_CHECK_LIB destroys it.
-	LIBS="$ac_save_LIBS"
-else
-	GUILE_CFLAGS=
-	GUILE_LDFLAGS=
-fi
 
 dnl Change default location of gtk-config
 AC_ARG_WITH(gtk-config, [  --with-gtk-config=path  Change where gtk-config is located], [opt_gtkconfig=$withval])
@@ -178,9 +147,6 @@ AC_SUBST(GTK_CFLAGS)
 AC_SUBST(GTK_CONFIG)
 AC_SUBST(GTK_LIBS)
 
-AC_SUBST(GUILE_CFLAGS)
-AC_SUBST(GUILE_LDFLAGS)
-
 AC_SUBST(GDK_PIXBUF_CFLAGS)
 AC_SUBST(GDK_PIXBUF_LIBS)
 AC_SUBST(PNG_LIBS)
@@ -190,5 +156,4 @@ AC_SUBST(BACKEND_DIR)
 AC_OUTPUT(	Makefile \
 		src/Makefile \
 		man/Makefile \
-		scheme/Makefile \
 		man/gerbv.1)
