@@ -22,6 +22,6 @@
 man_MANS = gerbv.1
 
 MOSTLYCLEANFILES = *~
-CLEANFILES = *~
-DISTCLEANFILES = *~ Makefile
-MAINTAINERCLEANFILES = *~ Makefile
+CLEANFILES = *~ gerbv.1
+DISTCLEANFILES = *~ Makefile gerbv.1
+MAINTAINERCLEANFILES = *~ Makefile gerbv.1
